# supercomputing.tue.nl

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.md  README.md  buildtest.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: container.yml  documentation.yml  mkdocs.yml
docs/: .nav.yml  .pages.yml  _redirects  contact.md  events.md  hpc-school.md  index.md  pages.yml  robots.txt
docs/blog/: .authors.yml  index.md
docs/documentation/: .nav.yml  .pages.yml  01-Umbrella_HPC_Cluster.md  02-SSH.md  03-ondemand.md  05-account.md  10-access.md  15-data.md  20-modules.md  25-jobs.md  99-Cluster_Policies.md  NodeList.md  Technical_specifications.md  account.md  administration.md  cluster-access.md  cluster-policies.md  datasets.md  faq.md  filesystems.md  index.md  jobs.md  pages.yml  policies.md  slurm-jobs.md  software-modules.md  specifications.md  standard_configs_2023.md  standard_configs_2024.md  tools.md  transfer-data.md
docs/solutions/: .pages.yml  index.md
docs/stylesheets/: extra.css
includes/: abbreviations.md
layouts/: custom.yml
overrides/: blog-post.html  blog.html  event-post.html  events.html  hpc-school.html  intro.html  landing.html  main.html  umbrella.html
overrides/blog/: card-full.html  card-small.html  cards.html  title.html
overrides/partials/: actions.html  comments.html  content.html  event.html  footer.html  header.html  hero.html  maintenance.html  nav.html  news.html  schedule.html  social.html  (+3 more)
pages/: .pages.yml  index.md
scripts/: slurm_sync.py
(+298 files in other folders)
